--- a/src/syncterm/GNUmakefile
+++ b/src/syncterm/GNUmakefile
@@ -83,6 +83,7 @@ $(MTOBJODIR)$(DIRSEP)conn$(OFILE): $(CRYPT_LIBS)
 $(MTOBJODIR)$(DIRSEP)ssh$(OFILE): $(CRYPT_LIBS)
 $(MTOBJODIR)$(DIRSEP)syncterm$(OFILE): $(CRYPT_LIBS) $(CIOLIB-MT)
 $(MTOBJODIR)$(DIRSEP)telnets$(OFILE): $(CRYPT_LIBS)
+$(MTOBJODIR)$(DIRSEP)webget$(OFILE): $(CRYPT_LIBS)
 $(CIOLIB_INTERPOLATE_OBJS): $(CIOLIB-MT_BUILD)
 
 ifeq ($(os),darwin)
