--- a/src/doors/clans-src/src/clans.props
+++ b/src/doors/clans-src/src/clans.props
@@ -24,7 +24,7 @@
     <Keyword>Win32Proj</Keyword>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
     <OutDir>../bin/</OutDir>
-    <IntDir>../obj/$(Configuration).$(Platform)/</IntDir>
+    <IntDir>../obj/$(Configuration).$(Platform)/$(MSBuildProjectName)/</IntDir>
     <TargetName>$(ProjectName).$(Platform).$(Configuration)</TargetName>
     <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
